Fix score stats being hidden by song info

--- a/src/styles/scoreStats.module.css
+++ b/src/styles/scoreStats.module.css
@@ -1,6 +1,4 @@
 .scoreStats {
-	position: fixed;
-	margin-top: -5px;
 	margin-left: 10px;
 	min-width: 135px;
 
