--- a/src/styles/songInfo.module.css
+++ b/src/styles/songInfo.module.css
@@ -1,6 +1,5 @@
 .songInfoContainer {
 	display: flex;
-	position: fixed;
 	margin-left: 5px;
 	margin-bottom: 5px;
 	margin-top: 5px;
